Update REST API to use new DAO for Loading Applications.